--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/moraesvictor/apollo-server#readme",
   "dependencies": {
     "apollo-server": "^3.11.1",
+    "dataloader": "^2.1.0",
     "faker": "^6.6.6",
     "graphql": "^16.6.0",
     "json-server": "^0.17.1"
