--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r sucrase/register src/index.js",
-    "server": "json-server --watch db."
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
     "dataloader": "^2.1.0",
     "faker": "^6.6.6",
     "graphql": "^16.6.0",
-    "json-server": "^0.17.1"
+    "json-server": "^0.17.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.45.0",
