--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config -r sucrase/register src/index.js",
+    "dev": "nodemon -r sucrase/register src/index.js",
     "server": "json-server --watch db.json"
   },
   "repository": {
